--- a/pom.xml
+++ b/pom.xml
@@ -120,13 +120,6 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
-		<!--  https://mvnrepository.com/artifact/org.springframework/spring-test  -->
-		<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-test</artifactId>
-		<version>${org.springframework-version}</version>
-		<scope>test</scope>
-		</dependency>
 				
 		<!-- Servlet -->
 		<dependency>
@@ -148,12 +141,27 @@
 		</dependency>
 	
 		<!-- Test -->
+		<!--  https://mvnrepository.com/artifact/org.springframework/spring-test  -->
+		<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-test</artifactId>
+		<version>${org.springframework-version}</version>
+		<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency> 
+		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.18.2</version>
+		</dependency>
+		       
 	</dependencies>
 	
 	
