--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency>        
+		</dependency>   
+		<dependency>
+		  <groupId>com.google.code.gson</groupId>
+		  <artifactId>gson</artifactId>
+		  <version>2.8.6</version>
+		</dependency>     
 	</dependencies>
 	
 	
